<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">My Accounts</string>
    <string name="account_lockout_warning">Too many incorrect password attempts. Please wait before trying again.</string>
    <string name="invalid_password">Your password is incorrect. Please try again.</string>
    <string name="re_enter_password">Enter your password again to confirm it.</string>
    <string name="account_created_successfully">Your account has been successfully created!</string>
    <string name="passwords_do_not_match">Passwords do not match. Please enter again</string>
    <string name="enter_account_password">Please enter your account password.</string>
    <string name="password_setup_prompt">Please create a 4-digit account password to be used when opening the application, then confirm it.</string>
    <string name="no_saved_account">No Saved Account!</string>
    <string name="no_saved_account_category">There are no accounts registered in this category!</string>
    <string name="add_account">Add Account</string>
    <string name="account_image">Account Image</string>
    <string name="all_items">All</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="recovery_email">Recovery Email</string>
    <string name="phone">Phone</string>
    <string name="recovery_phone">Recovery Phone</string>
    <string name="password">Password</string>
    <string name="title">Title</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="birthday">Birthday</string>
    <string name="security_question">Security Question</string>
    <string name="security_question_answer">Security Question Answer</string>
    <string name="address">Address</string>
    <string name="select_date">Select Date</string>
    <string name="other_informations">Other Informations</string>
    <string name="icons">Icons</string>
    <string name="category">Category</string>
    <string name="save">Save</string>
    <string name="add_new_category">Add New Category</string>
    <string name="warning_category">Please write category name</string>
    <string name="warning_exist_category">This category already exists</string>
    <string name="added_successfully">Added successfully</string>
    <string name="edited_successfully">Edited successfully</string>
    <string name="warning_title">Please write a title</string>
    <string name="getAllDataByIdASC">Sorting Oldest to Newest</string>
    <string name="getAllDataByIdDESC">Sort Newest to Oldest</string>
    <string name="getAllDataByTextASC">Ascending Sort by Title</string>
    <string name="getAllDataByTextDESC">Sort Descending by Title</string>
    <string name="search_hint">Search..</string>
    <string name="choose_date_format_pattern">Choose date format pattern</string>
    <string name="date_format">Date Format</string>
    <string name="pattern_warning">Please select a date format.</string>
    <string name="choose_date_format_pattern_desc">The date format is selected only once. Please choose the format that suits you.</string>
    <string name="voice_service_failed">The voice service failed to start.</string>

    <string name="name_copy">Copy Name</string>
    <string name="surname_copy">Copy Surname</string>
    <string name="username_copy">Copy Username</string>
    <string name="email_copy">Copy Email Address</string>
    <string name="recovery_email_copy">Copy Recovery Email</string>
    <string name="recovery_phone_copy">Copy Recovery Phone</string>
    <string name="phone_copy">Copy Phone</string>
    <string name="password_copy">Copy Password</string>
    <string name="title_copy">Copy Title</string>
    <string name="birthday_copy">Copy Birthday</string>
    <string name="security_question_copy">Copy Security Question</string>
    <string name="security_question_answer_copy">Copy Security Question Answer</string>
    <string name="address_copy">Copy Address</string>
    <string name="other_informations_copy">Copy Other Informations</string>

    <string name="name_copy_message">Name copied successfully</string>
    <string name="surname_copy_message">Surname copied successfully</string>
    <string name="username_copy_message">Username copied successfully</string>
    <string name="email_copy_message">Email Address copied successfully</string>
    <string name="recovery_email_copy_message">Recovery Email copied successfully</string>
    <string name="recovery_phone_copy_message">Recovery Phone copied successfully</string>
    <string name="phone_copy_message">Phone copied successfully</string>
    <string name="password_copy_message">Password copied successfully</string>
    <string name="title_copy_message">Title copied successfully</string>
    <string name="birthday_copy_message">Birthday copied successfully</string>
    <string name="security_question_copy_message">Security Question copied successfully</string>
    <string name="security_question_answer_copy_message">Security Question Answer copied successfully</string>
    <string name="address_copy_message">Address copied successfully</string>
    <string name="other_informations_copy_message">Other Informations copied successfully</string>
    <string name="delete_account">Delete the Account!</string>
    <string name="delete_account_desc">The selected account will be deleted. Do you want to proceed?</string>
    <string name="edit_account">Edit Account</string>
    <string name="delete_category">Delete the Category!</string>
    <string name="delete_category_desc">The selected category will be deleted. Do you want to proceed?</string>
    <string name="delete_all_data">Delete All Data!</string>
    <string name="delete_all_data_desc">All your registered accounts will be deleted. Do you want to proceed?</string>
    <string name="delete_account_message">Account deleted successfully</string>
    <string name="delete_all_data_message">All data deleted successfully</string>
    <string name="delete_category_message">Category deleted successfully</string>
    <string name="light_theme">Light Theme</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="export_data">Export Data</string>
    <string name="data_exported_successfully">Data exported successfully</string>
    <string name="file_already_exist">The same filename already exists, please try again</string>
    <string name="an_unknown_error_occurred">An unknown error occurred</string>
    <string name="file_permission_denied">File read/write permission denied</string>
    <string name="import_data">Import Data</string>
    <string name="start">Start!</string>
    <string name="import_desc">You can import the file saved in the device memory using the export method. Click the \'Select File\' path area below and choose the JSON file created in the \'Downloads\' folder. Then click the \'Start\' button at the bottom of the page to complete the import process. \nData stored within the application will not be deleted or modified.</string>
    <string name="select_file">Select File</string>
    <string name="select_json_file">Select JSON File</string>
    <string name="import_error">An error occurred during data import!</string>
    <string name="import_successful">Data import completed successfully!</string>
    <string name="disclaimer_title">Warning and Disclaimer</string>
    <string name="disclaimer_desc">Please read the following information carefully before starting to use the application.</string>
    <string name="disclaimer_checkbox">I have read and accept the entire disclaimer.</string>
    <string-array name="disclaimers">
        <item>This application is used to store information related to accounts saved by the user.</item>
        <item>All added accounts are stored in your device\'s memory and all data will be deleted if the application is uninstalled.</item>
        <item>Data is stored in a local database. Please note that nothing is completely secure. It is recommended to take additional measures to ensure the security of your device.</item>
        <item>All data is exported in JSON format to the \'Downloads\' folder within the application. The security of this file is the responsibility of the user.</item>
        <item>No liability is accepted for any damage or loss arising from the use of any feature or functionality provided by this application.</item>
        <item>Users should use this application at their own risk and be cautious.</item>
        <item>Before you start using the application, you confirm that you have carefully read and accepted this warning and disclaimer.</item>
    </string-array>
</resources>