<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottom_layout"
        tools:ignore="UnusedAttribute,ContentDescription,HardcodedText">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/app_primary"
            android:elevation="0dp"
            android:visibility="visible"
            app:elevation="0dp"
            app:expanded="true">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsingLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="0dp"
                android:fitsSystemWindows="false"
                app:contentScrim="@color/transparent"
                app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
                app:titleEnabled="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/text1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_12sdp"
                        android:layout_marginTop="@dimen/_9sdp"
                        android:layout_marginEnd="@dimen/_12sdp"
                        android:fontFamily="@font/gilroy_regular"
                        android:gravity="start"
                        android:text="@string/disclaimer_title"
                        android:textColor="@color/app_on_primary"
                        android:textSize="@dimen/_18ssp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/text2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_12sdp"
                        android:layout_marginEnd="@dimen/_12sdp"
                        android:fontFamily="@font/gilroy_regular"
                        android:gravity="start"
                        android:text="@string/disclaimer_desc"
                        android:textColor="@color/app_on_primary_variant"
                        android:textSize="@dimen/_14ssp"
                        android:textStyle="normal" />
                </LinearLayout>


            </com.google.android.material.appbar.CollapsingToolbarLayout>


        </com.google.android.material.appbar.AppBarLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text2"
            android:clipToPadding="false"
            android:elevation="@dimen/_3sdp"
            android:overScrollMode="never"
            android:paddingTop="@dimen/_9sdp"
            android:paddingBottom="@dimen/_9sdp"
            android:scrollbars="none"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            tools:listitem="@layout/disclaimer_item" />

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/text2"
            android:alpha="0.05"
            android:src="@drawable/ic_red_alert_icon"
            android:translationX="-80dp" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <LinearLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:orientation="vertical">

        <CheckBox
            android:id="@+id/checkbox"
            style="@style/CheckBoxHighlight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_9sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:checked="false"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/gilroy_regular"
            android:paddingStart="@dimen/_6sdp"
            android:paddingEnd="@dimen/_6sdp"
            android:text="@string/disclaimer_checkbox"
            android:textSize="@dimen/_12ssp"
            app:buttonTint="@color/app_primary_accent"
            tools:ignore="HardcodedText" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/start_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_12sdp"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/gilroy_regular"
            android:gravity="center"
            android:paddingTop="@dimen/_9sdp"
            android:paddingBottom="@dimen/_9sdp"
            android:text="@string/start"
            android:textColor="@color/dialog_button_text"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold"
            app:backgroundTint="@color/dialog_button_background"
            app:cornerRadius="@dimen/_12sdp"
            tools:ignore="MissingConstraints,UnusedAttribute,TouchTargetSizeCheck" />

    </LinearLayout>


</RelativeLayout>
