<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:fitsSystemWindows="true"
    tools:ignore="UnusedAttribute,UseCompoundDrawables,ContentDescription">


    <RelativeLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_49sdp"
        android:background="@color/app_primary"
        android:elevation="0dp"
        android:gravity="center_vertical"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="@dimen/_37sdp"
            android:layout_height="@dimen/_37sdp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/_6sdp"
            android:clickable="true"
            android:elevation="@dimen/_6sdp"
            android:focusable="true"
            android:foreground="@drawable/ripple_effect_circle_solid"
            android:padding="@dimen/_5sdp"
            android:src="@drawable/ic_ui_arrow_left"
            tools:ignore="ContentDescription,SpeakableTextPresentCheck" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@id/saveButton"
            android:layout_toEndOf="@id/backButton"
            android:clickable="false"
            android:focusable="false"
            android:fontFamily="@font/gilroy_bold"
            android:gravity="center"
            android:text="@string/import_data"
            android:textColor="@color/app_on_primary"
            android:textSize="@dimen/_18ssp" />

        <ImageView
            android:id="@+id/saveButton"
            android:layout_width="@dimen/_37sdp"
            android:layout_height="@dimen/_37sdp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/_6sdp"
            android:clickable="false"
            android:elevation="@dimen/_6sdp"
            android:focusable="false"
            android:padding="@dimen/_5sdp"
            android:visibility="invisible"
            tools:ignore="ContentDescription,SpeakableTextPresentCheck" />
    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/bottom_layout"
        android:layout_below="@id/headerLayout"
        android:clipToPadding="false"
        android:overScrollMode="never"
        android:paddingStart="@dimen/_9sdp"
        android:paddingEnd="@dimen/_9sdp"
        android:paddingBottom="@dimen/_12sdp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3sdp"
                android:autoSizeTextType="uniform"
                android:clickable="false"
                android:focusable="false"
                android:fontFamily="@font/gilroy_regular"
                android:gravity="start"
                android:lineSpacingExtra="@dimen/_6sdp"
                android:text="@string/import_desc"
                android:textColor="@color/dialog_on_container_variant"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/error_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3sdp"
                android:autoSizeTextType="uniform"
                android:clickable="false"
                android:focusable="false"
                android:fontFamily="@font/gilroy_regular"
                android:gravity="start"
                android:lineSpacingExtra="@dimen/_6sdp"
                android:textColor="@color/app_input_error"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold"
                android:visibility="gone" />
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_28sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/file_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_3sdp"
            android:background="@drawable/category_unselected"
            android:clickable="true"
            android:ellipsize="middle"
            android:focusable="true"
            android:fontFamily="@font/gilroy_regular"
            android:foreground="@drawable/ripple_effect_rectangle_v12sdp"
            android:gravity="center_vertical"
            android:lines="1"
            android:maxLines="1"
            android:minLines="1"
            android:padding="@dimen/_12sdp"
            android:singleLine="true"
            android:tag="unselected"
            android:text="@string/select_file"
            android:textColor="@color/dialog_on_container_variant"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold"
            app:drawableEndCompat="@drawable/ic_ui_import" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/startButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/gilroy_regular"
            android:gravity="center"
            android:paddingTop="@dimen/_9sdp"
            android:paddingBottom="@dimen/_9sdp"
            android:text="@string/start"
            android:textColor="@color/dialog_button_text"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold"
            app:backgroundTint="@color/dialog_button_background"
            app:cornerRadius="@dimen/_12sdp"
            tools:ignore="MissingConstraints,UnusedAttribute,TouchTargetSizeCheck" />
    </LinearLayout>
</RelativeLayout>